--- a/index.html
+++ b/index.html
@@ -26,14 +26,17 @@
 
 	<div id="editor">
 		<h2>Sample</h2>
+		<ol list-icon="0">
+			<li data-content="(一)">
+				<span class="spanClasses">
+					<span class="ck-list-bogus-paragraph">test</span>
+				</span>
+			</li>
+		</ol>
 
 		<p>This is an instance of the <a
 				href="https://ckeditor.com/docs/ckeditor5/latest/getting-started/legacy/installation-methods/predefined-builds.html#classic-editor">classic
 				editor build</a>.</p>
-
-		<figure class="image">
-			<img src="tests/manual/sample.jpg" alt="Autumn fields" />
-		</figure>
 
 		<p>You can use this sample to validate whether your <a
 				href="https://ckeditor.com/docs/ckeditor5/latest/installation/legacy/advanced/alternative-setups/custom-builds.html">custom
